force-app/main/default/objects/Contact_Sites__c/Contact_Sites__c.object-meta.xml
<CustomObject>
    <label>Contact Sites</label>
    <nameField>
        <displayFormat>SITE-{000}</displayFormat>
        <label>Contact Sites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>