force-app/main/default/objects/Contact_Sites__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Site__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Contact Sites</relationshipLabel>
    <relationshipName>Contact_Sites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>