force-app/main/default/objects/Contact_Sites__c/validationRules/Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.AccountId  &lt;&gt;  Site__r.Account__c</errorConditionFormula>
    <errorMessage>Please select the correct site that matches the contact account.</errorMessage>
</ValidationRule>